--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,13 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 10px 100px;
+    padding-bottom: 100px
 }
 
 ul {
+    margin: 0;
+    padding: 0;
     font-size: 18px;
     list-style: none;
     display: flex;
@@ -22,4 +26,43 @@ ul {
 a {
     text-decoration: none;
     color: #e5e7eb;
+}
+
+.intro {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F2937;
+    padding-bottom: 120px;
+    gap: 20px;
+}
+
+.intro-left {
+    width:400px;
+    flex-shrink: 0;
+}
+
+.intro img {
+    width: 450px;
+}
+
+h1 {
+    font-size: 48px;
+    font-weight: extra-bold;
+    color: #f9faf8;
+    margin: 0;
+}
+
+p {
+    font-size: 18px;
+    color: #e5e7eb;
+}
+
+button {
+    font-weight: bold;
+    background-color: #3882f6;
+    color: #e5e7eb;
+    border: none;
+    padding: 8px 22px;
+    border-radius: 4px;
 }
