--- a/styles.css
+++ b/styles.css
@@ -28,13 +28,17 @@ a {
     color: #e5e7eb;
 }
 
-.intro {
+.intro, .info {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #1F2937;
     padding-bottom: 120px;
+}
+
+.intro {
+    background-color: #1F2937;
     gap: 20px;
+    margin-bottom: 50px;
 }
 
 .intro-left {
@@ -65,4 +69,35 @@ button {
     border: none;
     padding: 8px 22px;
     border-radius: 4px;
+}
+
+.title {
+    font-size: 36px;
+    font-weight: extra-bold;
+    color: #1F2937;
+    margin-bottom: 30px;
+}
+
+.text {
+    color: #1F2937;
+}
+
+.info {
+    flex-direction: column;
+}
+
+.info-box-container {
+    display: flex;
+    gap: 24px;
+}
+
+.info-box {
+    width: 200px;
+    text-align: center;
+}
+
+.info img {
+    width: 200px;
+    border-radius: 8px;
+    margin-bottom: 4px;
 }
