--- a/styles.css
+++ b/styles.css
@@ -126,3 +126,32 @@ button {
     justify-content: flex-end;
     width: 680px;
 }
+
+.call-to-action {
+    display: flex;
+    justify-content: center;
+    padding: 70px 0;
+}
+
+.cta-container {
+    background-color: #3882f6;
+    display: flex;
+    justify-content: space-around;
+    width: 800px;
+    padding: 30px 0;
+    border-radius: 8px;
+}
+
+.cta-title {
+    font-size: 18px;
+    font-weight: bold;
+    color: #f9faf8;
+}
+
+.cta-leftside .text {
+    color: #f9faf8;
+}
+
+.cta-container button {
+    border: 2px solid #f9faf8;
+}
