--- a/styles.css
+++ b/styles.css
@@ -155,3 +155,12 @@ button {
 .cta-container button {
     border: 2px solid #f9faf8;
 }
+
+.footer {
+    background-color: #1F2937;
+    color:#f9faf8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+}
